Change release branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,7 +189,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - react-compatibility
       - publish:
           context:
             - grommet
