fix(AccordionPanel): fix render failure in react 16 and 17 by using alternative id hook

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "grommet-icons": "^4.12.1",
     "hoist-non-react-statics": "^3.2.0",
     "markdown-to-jsx": "7.4.4",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "react-use-id-hook": "1.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.6",
