change release step in circleci to point back to master branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,7 +189,7 @@ workflows:
           filters:
             branches:
               only:
-                - react-compatibility
+                - master
       - publish:
           context:
             - grommet
