--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@emotion/is-prop-valid": "^1.3.1",
     "grommet-icons": "^4.12.4",
     "hoist-non-react-statics": "^3.3.2",
-    "markdown-to-jsx": "7.4.4",
+    "markdown-to-jsx": "^7.7.3",
     "prop-types": "^15.8.1"
   },
   "devDependencies": {
