--- a/package.json
+++ b/package.json
@@ -75,6 +75,9 @@
     "@babel/plugin-transform-optional-chaining": "^7.25.9",
     "@babel/preset-env": "^7.26.8",
     "@babel/preset-react": "^7.26.3",
+    "@eslint/compat": "^1.2.6",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.20.0",
     "@storybook/addon-a11y": "7.0.20",
     "@storybook/addon-storysource": "7.0.20",
     "@storybook/addon-toolbars": "7.0.20",
@@ -106,17 +109,18 @@
     "core-js": "^3.40.0",
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.20.1",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "5.0.0",
-    "eslint-plugin-testing-library": "^6.4.0",
+    "eslint-plugin-testing-library": "^7.1.1",
     "fs-extra": "^11.3.0",
+    "globals": "^15.15.0",
     "grommet-theme-hpe": "^6.0.0",
     "jest": "^29.7.0",
     "jest-axe": "^9.0.0",
