--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,23 @@
 {
-  "presets": ["./tools/grommet-babel-preset-es2015", "@babel/preset-react"],
+  "presets": [
+    "./tools/grommet-babel-preset-es2015",
+    "@babel/preset-react",
+    "@babel/preset-env",
+    "@babel/preset-typescript"
+  ],
   "plugins": [
-    ["styled-components", { "useDisplayName": false }],
-    ["@babel/plugin-transform-class-properties", { "loose": true }]
+    [
+      "styled-components",
+      {
+        "useDisplayName": false
+      }
+    ],
+    [
+      "@babel/plugin-transform-class-properties",
+      {
+        "loose": true
+      }
+    ]
   ],
   "env": {
     "es6": {
