--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "bugs": "https://github.com/grommet/grommet/issues",
   "license": "Apache-2.0",
   "repository": {
-    "type": "git",
+    "type": "module",
     "url": "https://github.com/grommet/grommet.git"
   },
   "engines": {
@@ -46,7 +46,8 @@
     "test-e2e-ci": "testcafe chrome --headless=new e2e/tests -r xunit:/tmp/test-results/testcafe/results.xml",
     "build-storybook": "storybook build -c storybook -o storybook-static",
     "prettier": "pretty-quick --staged",
-    "chromatic": "chromatic"
+    "chromatic": "chromatic",
+    "dev": "webpack serve --config ./webpack.config.dev.js --mode development"
   },
   "peerDependencies": {
     "react": "^16.6.1 || ^17.0.0 || ^18.0.0",
@@ -55,6 +56,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
+    "grommet": "^2.45.1",
     "grommet-icons": "^4.12.4",
     "hoist-non-react-statics": "^3.3.2",
     "markdown-to-jsx": "7.4.4",
@@ -62,7 +64,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
-    "@babel/core": "^7.26.8",
+    "@babel/core": "^7.26.9",
     "@babel/eslint-parser": "^7.26.8",
     "@babel/node": "^7.26.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -75,6 +77,7 @@
     "@babel/plugin-transform-optional-chaining": "^7.25.9",
     "@babel/preset-env": "^7.26.8",
     "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@chromatic-com/storybook": "^3",
     "@eslint/compat": "^1.2.6",
     "@eslint/eslintrc": "^3.2.0",
@@ -98,6 +101,8 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/styled-components": "^5.1.34",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
@@ -124,6 +129,7 @@
     "fs-extra": "^11.3.0",
     "globals": "^15.15.0",
     "grommet-theme-hpe": "^6.0.0",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-axe": "^9.0.0",
     "jest-cli": "^29.7.0",
@@ -138,6 +144,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
     "react-is": "^18.3.1",
+    "react-scripts": "^5.0.1",
     "react-shadow": "^20.6.0",
     "regenerator-runtime": "^0.14.1",
     "simple-git": "^3.27.0",
@@ -149,8 +156,8 @@
     "testcafe-reporter-xunit": "^2.2.3",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
-    "typescript": "^5.7.3",
-    "webpack": "^5.97.1",
+    "typescript": "^5.8.2",
+    "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
   },
