--- a/package.json
+++ b/package.json
@@ -78,14 +78,14 @@
     "@eslint/compat": "^1.2.7",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.23.0",
-    "@storybook/addon-a11y": "^8.6.11",
-    "@storybook/addon-storysource": "^8.6.11",
-    "@storybook/addon-toolbars": "^8.6.11",
-    "@storybook/addon-webpack5-compiler-babel": "^3.0.6",
-    "@storybook/manager-api": "^8.6.11",
-    "@storybook/react": "^8.6.11",
-    "@storybook/react-webpack5": "^8.6.11",
-    "@storybook/source-loader": "^8.6.11",
+    "@storybook/addon-a11y": "8.5.8",
+    "@storybook/addon-storysource": "8.5.8",
+    "@storybook/addon-toolbars": "8.5.8",
+    "@storybook/addon-webpack5-compiler-babel": "3.0.5",
+    "@storybook/manager-api": "8.5.8",
+    "@storybook/react": "^8.5.8",
+    "@storybook/react-webpack5": "8.5.8",
+    "@storybook/source-loader": "8.5.8",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
