revert some packages

--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
     "@babel/preset-react": "^7.26.3",
     "@chromatic-com/storybook": "^3",
     "@eslint/compat": "^1.2.7",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.23.0",
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.20.0",
     "@storybook/addon-a11y": "8.5.8",
     "@storybook/addon-storysource": "8.5.8",
     "@storybook/addon-toolbars": "8.5.8",
@@ -103,14 +103,14 @@
     "babel-plugin-styled-components": "^2.1.4",
     "babel-plugin-transform-imports": "^2.0.0",
     "bundlesize2": "^0.0.34",
-    "chromatic": "^11.27.0",
+    "chromatic": "11.25.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "copyfiles": "^2.4.1",
-    "core-js": "^3.41.0",
+    "core-js": "3.40.0",
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
-    "eslint": "^9.23.0",
+    "eslint": "9.20.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-babel": "^5.3.1",
@@ -140,7 +140,7 @@
     "react-shadow": "^20.6.0",
     "regenerator-runtime": "^0.14.1",
     "simple-git": "^3.27.0",
-    "storybook": "^8.6.11",
+    "storybook": "8.5.8",
     "styled-components": "^6.1.16",
     "tarball-extract": "^0.0.6",
     "testcafe": "^3.7.2",
