--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "prop-types": "^15.8.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.27.0",
-    "@babel/core": "^7.26.10",
-    "@babel/eslint-parser": "^7.27.0",
+    "@babel/cli": "7.26.4",
+    "@babel/core": "7.26.8",
+    "@babel/eslint-parser": "7.26.8",
     "@babel/node": "^7.26.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-do-expressions": "^7.25.9",
@@ -72,7 +72,7 @@
     "@babel/plugin-transform-logical-assignment-operators": "^7.25.9",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.26.6",
     "@babel/plugin-transform-optional-chaining": "^7.25.9",
-    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-env": "7.26.8",
     "@babel/preset-react": "^7.26.3",
     "@chromatic-com/storybook": "^3",
     "@eslint/compat": "^1.2.7",
@@ -141,12 +141,12 @@
     "regenerator-runtime": "^0.14.1",
     "simple-git": "^3.27.0",
     "storybook": "8.5.8",
-    "styled-components": "^6.1.16",
+    "styled-components": "6.1.15",
     "tarball-extract": "^0.0.6",
     "testcafe": "^3.7.2",
     "testcafe-react-selectors": "^5.0.3",
     "testcafe-reporter-xunit": "^2.2.3",
-    "ts-jest": "^29.3.1",
+    "ts-jest": "29.2.5",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
     "webpack": "^5.97.1",
