--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@babel/preset-env": "7.26.8",
     "@babel/preset-react": "^7.26.3",
     "@chromatic-com/storybook": "^3",
-    "@eslint/compat": "^1.2.7",
+    "@eslint/compat": "1.2.6",
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.20.0",
     "@storybook/addon-a11y": "8.5.8",
@@ -93,9 +93,9 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/jest-axe": "^3.5.9",
-    "@types/node": "^22.13.17",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.5",
+    "@types/node": "22.13.1",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
     "@types/styled-components": "^5.1.34",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^29.7.0",
@@ -112,13 +112,13 @@
     "del": "^6.1.1",
     "eslint": "9.20.1",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint-config-prettier": "10.0.1",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.5",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-testing-library": "^7.1.1",
     "fs-extra": "^11.3.0",
     "globals": "^15.15.0",
@@ -129,7 +129,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-styled-components": "7.0.5",
     "jsdom": "^26.0.0",
-    "postcss": "^8.5.3",
+    "postcss": "8.5.2",
     "pre-commit": "^1.2.2",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
@@ -143,7 +143,7 @@
     "storybook": "8.5.8",
     "styled-components": "6.1.15",
     "tarball-extract": "^0.0.6",
-    "testcafe": "^3.7.2",
+    "testcafe": "3.7.1",
     "testcafe-react-selectors": "^5.0.3",
     "testcafe-reporter-xunit": "^2.2.3",
     "ts-jest": "29.2.5",
@@ -151,7 +151,7 @@
     "typescript": "^5.8.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1"
+    "webpack-dev-server": "5.2.0"
   },
   "jest": {
     "transform": {
