--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "chromatic": "chromatic"
   },
   "peerDependencies": {
-    "react": "^16.6.1 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.6.1 || ^17.0.0 || ^18.0.0",
+    "react": "^16.6.1 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.6.1 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "styled-components": "^5.1.0 || ^6.0.0"
   },
   "dependencies": {
@@ -94,8 +94,8 @@
     "@types/jest": "^29.5.14",
     "@types/jest-axe": "^3.5.9",
     "@types/node": "^22.14.0",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@types/styled-components": "^5.1.34",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^29.7.0",
@@ -133,10 +133,10 @@
     "pre-commit": "^1.2.2",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.3.1",
-    "react": "^18.3.1",
+    "react": "19.0.0",
     "react-dev-utils": "^12.0.1",
-    "react-dom": "^18.3.1",
-    "react-is": "^18.3.1",
+    "react-dom": "19.0.0",
+    "react-is": "19.0.0",
     "react-shadow": "^20.6.0",
     "regenerator-runtime": "^0.14.1",
     "simple-git": "^3.27.0",
@@ -213,7 +213,7 @@
   "bundlesize": [
     {
       "path": "./dist/grommet.min.js",
-      "maxSize": "177 kB"
+      "maxSize": "184 kB"
     }
   ],
   "keywords": [
