remove label bug from issue template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,6 @@
-name: Bug report
-description: File a bug report to help us improve
-title: '[Bug]: '
-labels: [bug]
+name: Bug/Enhancement report
+description: File a bug report or enhancement to help us improve
+title: ''
 body:
   - type: dropdown
     id: will_contribute
@@ -49,7 +48,7 @@ body:
     id: environment
     attributes:
       label: Your Environment
-      placeholder: |
+      default: |
         - Grommet version:
         - Browser name and version:
         - Operating System and version:
