--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@types/styled-components": "^5.1.34",
-    "babel-core": "^6.26.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^30.0.5",
     "babel-loader": "^10.0.0",
     "babel-plugin-styled-components": "^2.1.4",
