--- a/package.json
+++ b/package.json
@@ -74,18 +74,18 @@
     "@babel/plugin-transform-optional-chaining": "^7.27.1",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
-    "@chromatic-com/storybook": "^3.2.6",
+    "@chromatic-com/storybook": "3.2.6",
     "@eslint/compat": "^1.2.9",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.32.0",
-    "@storybook/addon-a11y": "^8.6.14",
-    "@storybook/addon-storysource": "^8.6.14",
-    "@storybook/addon-toolbars": "^8.6.14",
+    "@storybook/addon-a11y": "8.6.14",
+    "@storybook/addon-storysource": "8.6.14",
+    "@storybook/addon-toolbars": "8.6.14",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.6",
-    "@storybook/manager-api": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/react-webpack5": "^8.6.14",
-    "@storybook/source-loader": "^8.6.14",
+    "@storybook/manager-api": "8.6.14",
+    "@storybook/react": "8.6.14",
+    "@storybook/react-webpack5": "8.6.14",
+    "@storybook/source-loader": "8.6.14",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -103,7 +103,7 @@
     "babel-plugin-styled-components": "^2.1.4",
     "babel-plugin-transform-imports": "^2.0.0",
     "bundlesize2": "^0.0.35",
-    "chromatic": "^13.1.2",
+    "chromatic": "13.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "copyfiles": "^2.4.1",
@@ -140,7 +140,7 @@
     "react-shadow": "^20.6.0",
     "regenerator-runtime": "^0.14.1",
     "simple-git": "^3.28.0",
-    "storybook": "^8.6.14",
+    "storybook": "8.6.14",
     "styled-components": "^6.1.19",
     "tarball-extract": "^0.0.6",
     "testcafe": "^3.7.2",
