--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "prettier": "pretty-quick --staged",
     "chromatic": "chromatic"
   },
+  "resolutions": {
+    "ajv": "^6.0.0"
+  },
   "peerDependencies": {
     "react": "^16.6.1 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^16.6.1 || ^17.0.0 || ^18.0.0 || ^19.0.0",
