--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.4.0",
+    "@hpe-design/icons-grommet": "^1.0.1",
     "grommet-icons": "^4.14.0",
     "markdown-to-jsx": "7.4.4",
     "prop-types": "^15.8.1"
@@ -122,7 +123,7 @@
     "eslint-plugin-testing-library": "^7.13.3",
     "fs-extra": "^11.3.2",
     "globals": "^16.4.0",
-    "grommet-theme-hpe": "^7.0.2",
+    "grommet-theme-hpe": "^8.0.0",
     "jest": "^30.2.0",
     "jest-axe": "^10.0.0",
     "jest-cli": "^30.2.0",
